--- a/src/components/style.css
+++ b/src/components/style.css
@@ -54,6 +54,13 @@ html {
   max-width: 500px;
 }
 
+.reset{
+  cursor: pointer;
+  letter-spacing: 0.1em;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
 .contain {
   display: flex;
   flex-wrap: wrap;
